// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with prop order 1`] = `
"alternative-0 ::= \\"{\\" space  (alternative-0-arguments-kv alternative-0-arguments-rest | alternative-0-function-kv )? \\"}\\" space
alternative-0-arguments ::= \\"{\\" space  (alternative-0-arguments-title-kv alternative-0-arguments-title-rest | alternative-0-arguments-date-kv alternative-0-arguments-date-rest | alternative-0-arguments-time-kv )? \\"}\\" space
alternative-0-arguments-date-kv ::= \\"\\\\\\"date\\\\\\"\\" space \\":\\" space string
alternative-0-arguments-date-rest ::= ( \\",\\" space alternative-0-arguments-time-kv )?
alternative-0-arguments-kv ::= \\"\\\\\\"arguments\\\\\\"\\" space \\":\\" space alternative-0-arguments
alternative-0-arguments-rest ::= ( \\",\\" space alternative-0-function-kv )?
alternative-0-arguments-time-kv ::= \\"\\\\\\"time\\\\\\"\\" space \\":\\" space string
alternative-0-arguments-title-kv ::= \\"\\\\\\"title\\\\\\"\\" space \\":\\" space string
alternative-0-arguments-title-rest ::= ( \\",\\" space alternative-0-arguments-date-kv )? alternative-0-arguments-date-rest
alternative-0-function ::= \\"\\\\\\"create_event\\\\\\"\\"
alternative-0-function-kv ::= \\"\\\\\\"function\\\\\\"\\" space \\":\\" space alternative-0-function
alternative-1 ::= \\"{\\" space  (alternative-1-arguments-kv alternative-1-arguments-rest | alternative-1-function-kv )? \\"}\\" space
alternative-1-arguments ::= \\"{\\" space  (alternative-1-arguments-query-kv )? \\"}\\" space
alternative-1-arguments-kv ::= \\"\\\\\\"arguments\\\\\\"\\" space \\":\\" space alternative-1-arguments
alternative-1-arguments-query-kv ::= \\"\\\\\\"query\\\\\\"\\" space \\":\\" space string
alternative-1-arguments-rest ::= ( \\",\\" space alternative-1-function-kv )?
alternative-1-function ::= \\"\\\\\\"image_search\\\\\\"\\"
alternative-1-function-kv ::= \\"\\\\\\"function\\\\\\"\\" space \\":\\" space alternative-1-function
root ::= alternative-0 | alternative-1
space ::= \\" \\"?
string ::=  \\"\\\\\\"\\" (
        [^\\"\\\\\\\\] |
        \\"\\\\\\\\\\" ([\\"\\\\\\\\/bfnrt] | \\"u\\" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F])
      )* \\"\\\\\\"\\" space
"
`;

exports[`without prop order 1`] = `
"alternative-0 ::= \\"{\\" space  (alternative-0-function-kv alternative-0-function-rest | alternative-0-arguments-kv )? \\"}\\" space
alternative-0-arguments ::= \\"{\\" space  (alternative-0-arguments-title-kv alternative-0-arguments-title-rest | alternative-0-arguments-date-kv alternative-0-arguments-date-rest | alternative-0-arguments-time-kv )? \\"}\\" space
alternative-0-arguments-date-kv ::= \\"\\\\\\"date\\\\\\"\\" space \\":\\" space string
alternative-0-arguments-date-rest ::= ( \\",\\" space alternative-0-arguments-time-kv )?
alternative-0-arguments-kv ::= \\"\\\\\\"arguments\\\\\\"\\" space \\":\\" space alternative-0-arguments
alternative-0-arguments-time-kv ::= \\"\\\\\\"time\\\\\\"\\" space \\":\\" space string
alternative-0-arguments-title-kv ::= \\"\\\\\\"title\\\\\\"\\" space \\":\\" space string
alternative-0-arguments-title-rest ::= ( \\",\\" space alternative-0-arguments-date-kv )? alternative-0-arguments-date-rest
alternative-0-function ::= \\"\\\\\\"create_event\\\\\\"\\"
alternative-0-function-kv ::= \\"\\\\\\"function\\\\\\"\\" space \\":\\" space alternative-0-function
alternative-0-function-rest ::= ( \\",\\" space alternative-0-arguments-kv )?
alternative-1 ::= \\"{\\" space  (alternative-1-function-kv alternative-1-function-rest | alternative-1-arguments-kv )? \\"}\\" space
alternative-1-arguments ::= \\"{\\" space  (alternative-1-arguments-query-kv )? \\"}\\" space
alternative-1-arguments-kv ::= \\"\\\\\\"arguments\\\\\\"\\" space \\":\\" space alternative-1-arguments
alternative-1-arguments-query-kv ::= \\"\\\\\\"query\\\\\\"\\" space \\":\\" space string
alternative-1-function ::= \\"\\\\\\"image_search\\\\\\"\\"
alternative-1-function-kv ::= \\"\\\\\\"function\\\\\\"\\" space \\":\\" space alternative-1-function
alternative-1-function-rest ::= ( \\",\\" space alternative-1-arguments-kv )?
root ::= alternative-0 | alternative-1
space ::= \\" \\"?
string ::=  \\"\\\\\\"\\" (
        [^\\"\\\\\\\\] |
        \\"\\\\\\\\\\" ([\\"\\\\\\\\/bfnrt] | \\"u\\" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F])
      )* \\"\\\\\\"\\" space
"
`;
